Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96343

inheritance cycle not detected correctly

    XMLWordPrintable

Details

    • 64a3e205edfe0de8283bbc83d65ec808464d0ab5 (qt/qtdeclarative/dev)

    Description

      I build qmllint from 14a3b34906be5b749ebc6b6c1d8f6807fff8fd88 in qtdeclarative.

      And for such code:

      MyListView.qml

      import QtQuick 2.15
      
      MyListView {
              MyMouseArea {}
      }
      

      MyMouseArea

      import QtQuick 2.11
      
      MouseArea {
      
          enabled: visible
      }
      

      qmllint hangs. Interesting that if remove `MyMouseArea {}` from MyListView.qml qmllint detects inheritance cycle:

      /usr/local/qt6_tools/bin/qmllint MyListView.qml
      Warning: MyListView.qml: MyListView is part of an inheritance cycle: MyListView -> MyListView
      

      qmllint that I use everyday and that build from a1c91787264f6f535b5cf094b57ee53058856df4 with my patches on top of it (because I can not find any revision later that have no bugs) produces warnings for both cases about inheritance cycle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            evgeniy_dushistov evgeniy_dushistov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes