qmllint: Ignore scopes affected by inheritance cycles

We cannot reasonably process these because we will get caught up in endless loops when trying to check various things about them.

Fixes: QTBUG-96343
Change-Id: I866b26f008fd38f29f0875dc3138b000da16b264
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>