tests/auto/qml/qmllint/data/Cycle1.qml
@@ -1,2 +1,4 @@
 import QtQml 2.0
-Cycle2 {}
+Cycle2 {
+    QtObject {} // Having children here has caused qmllint to hang in the past (QTBUG-96343)
+}
